--- a/cdpincha1_Act02_3788/Capitulo 4 - Barra de menu.html
+++ b/cdpincha1_Act02_3788/Capitulo 4 - Barra de menu.html
@@ -323,7 +323,7 @@
 								<li><a href="#">Herrera Anahy</a></li>
 								<li><a href="#">Paredes Camila</a></li>
 								<li class="divider"></li>
-								<li><a href="Index_Act01.html" target="_blank"><strong>Pincha Cristian</strong></a></li>
+								<li><a href="Act01.html" target="_blank"><strong>Pincha Cristian</strong></a></li>
 
 							</ul>
 						</li>
