--- a/index.html
+++ b/index.html
@@ -1,69 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bootstrap4 Landing01</title>
-    <!-- BOOTSTRAP CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Bootstrap Website Two</title>
+    <!-- GOOGLE FONT -->
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet" />
+    <!-- BOOTSTRAP 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- SCROOLL REVEAL JS LIBRARY CDN -->
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
 
-<body>
-
-    <header class="container">
-        <div class="row">
-            <div class="col-sm-12 my-4">
-                <a href="index.html mt-4">
-                    <img src="img/RUSIA_LOGO.png" class="logo">
-                </a>
-                <h1 class="text-center display-3 text-uppercase font-weight-bold mt-4">Landing Page RUSIA</h1>
-            </div>
-            <div class="col-sm-6">
-                <img src="img/RUSIA_CENTRO.png" class="img-fluid" style="width: 300px; height: auto;">
-            </div>
-            <div class="col-sm-6 text-center">
-                <p class="text-center text-description">Rusia fortalece su alianza estratégica y amplía su producción militar, marcando un punto clave en la geopolítica global.</p>
-                <form action="index.html">
-                    <input class="form-control rounded-0 my-4 text-center" type="email" name="Write your Email"
-                        placeholder="Enter your email">
-                    <button type="submit" class="btn btn-light btn-outline rounded-0">
-                        CONOCENOS
-                    </button>
-                </form>
-                <ul class="list-unstyled list-inline mt-4">
-                    <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-instagram"></i> <!-- Instagram -->
-                        </a>
-                        <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">
-                                <i class="fab fa-linkedin"></i> <!-- LinkedIn -->
-                            </a>
-                    
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-whatsapp"></i> <!-- WhatsApp -->
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-discord"></i> <!-- Discord -->
-                        </a>
-                    </li>
-                </ul>
-            </div>
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <a class="navbar-brand" href="#">RUSIA</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link" href="#header">Historia y Formacion</a>
+          <a class="nav-item nav-link" href="#info-one">Economia y sectores Productivos</a>
+          <a class="nav-item nav-link" href="#contact">Contactanos</a>
         </div>
-    </header>
+      </div>
+    </nav>
 
-</body>
+    <!-- SECTION -->
+    <section id="header">
+      <div class="container mt-5">
+        <div class="row">
+          <div class="col-md-6 col-sm-6">
+            <div class="header-content-left">
+              <img src="img/Rusia_1.jpeg" style="width: 100%;">
+            </div>  
+          </div>
+          <div class="col-md-6 col-sm-6">
+            <div class="header-content-right">
+              <h1 class="display-4">Rusia, sus culturas y tradiciones</h1>
+              <p class="mt-5">La cultura y tradición de Rusia es rica y diversa, influenciada por su historia imperial y soviética. Es conocida por su literatura (Dostoyevski, Tolstói), música clásica (Tchaikovsky, Stravinsky) y el ballet. Las tradiciones incluyen la hospitalidad, el té servido en samovares, y festividades como la Maslenitsa, una celebración previa a la Cuaresma con panqueques y actividades al aire libre. Iconos religiosos y la arquitectura ortodoxa, como las cúpulas en forma de cebolla, reflejan su espiritualidad. La cocina destaca por platos como el borsch, pelmeni y caviar.</p>
+              <a href="#" class="btn btn-outline-secondary header-btn btn-lg mt-2">Conoce mas</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section id="testimonial">
+      <div class="container">
+        <p class="h2 mb-2">
+          "No nos dejaron otra opción para defender a Rusia más que llevar a cabo una operación militar especial. Todos los intentos de lograr acuerdos fueron en vano."
+        </p>
+        <p class="h4">- Vladimir Putin</p>
+      </div>
+    </section>
+
+    <section id="info-one">
+      <div class="container">
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <div class="info-left">
+              <img src="img/Rusia_2.png" style="width: 100%">
+            </div>
+          </div>
+          <div class="col-md-6 my-auto">
+            <div class="info-right">
+              <h2>Rusia y su economia tras una guerra</h2>
+              <p>La economía de Rusia es una de las más grandes del mundo, basada en gran medida en la exportación de recursos naturales, especialmente petróleo, gas natural y minerales. Como uno de los principales exportadores de energía, Rusia juega un papel clave en los mercados globales. Sin embargo, su dependencia de las materias primas la hace vulnerable a las fluctuaciones de precios en estos sectores.
+
+                El gobierno ha buscado diversificar la economía mediante inversiones en tecnología, industria militar y agricultura, logrando ser autosuficiente en algunos sectores. Las sanciones internacionales y conflictos geopolíticos recientes han afectado su acceso a mercados y tecnología extranjera, incentivando políticas de sustitución de importaciones y fortalecimiento de alianzas económicas con países como China e India. A pesar de los desafíos, Rusia sigue siendo un actor estratégico en el comercio global.</p>
+              <a href="#" class="btn btn-outline-secondary btn-lg">Conoce mas</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="info-two">
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-6">
+            <h2>Rusia y Ucrania</h2>
+            <p>El conflicto entre Rusia y Ucrania comenzó en 2014 con la anexión de Crimea por parte de Rusia, tras el derrocamiento del gobierno prorruso en Kiev durante el Euromaidán. Desde entonces, la guerra se intensificó en el este de Ucrania, donde grupos separatistas prorrusos, respaldados por Rusia, lucharon contra las fuerzas ucranianas en regiones como Donetsk y Lugansk.</p>
+          </div>
+          <div class="col-md-6">
+            <h2>Rusia y la OTAN</h2>
+            <p>La OTAN, aunque no participa directamente en la guerra entre Rusia y Ucrania, ha desempeñado un papel crucial al brindar apoyo militar y humanitario a Ucrania. Esto incluye el suministro de armas avanzadas, entrenamiento militar, inteligencia y recursos financieros para fortalecer la capacidad defensiva de Ucrania frente a la invasión rusa.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5">
+            <form class="card mt-4">
+              <div class="card-body">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Nombre">
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <textarea cols="30" rows="10" placeholder="Dejanos tu mensaje" class="form-control"></textarea>
+                </div>
+                <button class="btn btn-outline-secondary btn-block">
+                  Enviar
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- SCRIPTS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+    <!-- SCROOLL REVEAL SCRIPT -->
+    <script>
+      window.sr = ScrollReveal();
+
+    sr.reveal('.navbar', {
+      duration: 2000,
+      origin: 'bottom'
+    });
+
+    sr.reveal('.header-content-left', {
+      duration: 2000,
+      origin: 'top',
+      distance: '300px'
+    });
+
+    sr.reveal('.header-content-right', {
+      duration: 2000,
+      origin: 'right',
+      distance: '300px'
+    });
+
+    sr.reveal('.header-btn', {
+      duration: 2000,
+      delay: 1000, 
+      origin: 'bottom'
+    });
+
+    sr.reveal('#testimonial div', {
+      duration: 2000,
+      origin: 'left',
+      distance: '300px',
+      viewFactor: 0.2
+    });
+
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
+    });
+    </script>
+  </body>
 </html>
